[gd_scene load_steps=36 format=3 uid="uid://bhd3exak0ojtj"]

[ext_resource type="Script" path="res://Arena/arena.gd" id="1_ea2pg"]
[ext_resource type="PackedScene" uid="uid://cbfe05uqpe2ww" path="res://Player/player.tscn" id="1_pqj1j"]
[ext_resource type="Texture2D" uid="uid://brc2v502yy20g" path="res://Arena/Decorations/Background.png" id="2_lxqbl"]
[ext_resource type="Texture2D" uid="uid://c80d5ji7w1td1" path="res://Arena/Decorations/Specimen Pod (Open).png" id="3_5e073"]
[ext_resource type="Texture2D" uid="uid://dykhmrnlw2e76" path="res://Arena/Decorations/Ceiling Light.png" id="3_8geih"]
[ext_resource type="Script" path="res://Arena/arena_state_machine.gd" id="4_53yap"]
[ext_resource type="Texture2D" uid="uid://c858e4dsfmjdb" path="res://Arena/Decorations/Specimen Pod.png" id="4_b8tu2"]
[ext_resource type="Texture2D" uid="uid://dajgnj550x52u" path="res://Arena/Decorations/Terminal.png" id="5_reyu3"]
[ext_resource type="Script" path="res://Arena/arena_state_round_active.gd" id="5_vs3oy"]
[ext_resource type="Script" path="res://Arena/arena_state_upgrade_selection.gd" id="6_303ff"]
[ext_resource type="Texture2D" uid="uid://d6annd5ludj6" path="res://Arena/Decorations/TV Screen.png" id="6_impxk"]
[ext_resource type="Texture2D" uid="uid://8wq4wuurwel7" path="res://Arena/Decorations/Loose Cables.png" id="7_eljs4"]
[ext_resource type="Texture2D" uid="uid://566fe8tibsl5" path="res://Arena/Decorations/Window.png" id="8_c1m3y"]
[ext_resource type="Script" path="res://Arena/arena_state_score_screen.gd" id="8_p700b"]
[ext_resource type="Texture2D" uid="uid://bdyuxu8blv5f8" path="res://Arena/Decorations/Ceiling Light 2.png" id="10_o7cfw"]
[ext_resource type="PackedScene" uid="uid://b2myeafehcosh" path="res://Common/AudioManagers/music_manager.tscn" id="11_gl3pw"]

[sub_resource type="Gradient" id="Gradient_gucvv"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_et5pj"]
gradient = SubResource("Gradient_gucvv")
fill = 1
fill_from = Vector2(0.513761, 0.266055)
fill_to = Vector2(0.536697, 0.752294)

[sub_resource type="Gradient" id="Gradient_36lnp"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6w4b7"]
gradient = SubResource("Gradient_36lnp")
fill = 1
fill_from = Vector2(0.270642, 0.472477)
fill_to = Vector2(0.688073, 0.43578)

[sub_resource type="Gradient" id="Gradient_qivkg"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_mxxmj"]
gradient = SubResource("Gradient_qivkg")
fill = 2
fill_from = Vector2(0.233945, 0.486239)
fill_to = Vector2(0.623853, 0.293578)

[sub_resource type="Gradient" id="Gradient_tek5p"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_26yt2"]
gradient = SubResource("Gradient_tek5p")
fill = 2
fill_from = Vector2(0.481651, 0.518349)
fill_to = Vector2(0.5, 0.087156)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_vfrab"]
polygon = PackedVector2Array(-70, -40.8038, -52.5714, -40.8038, -52.5714, -38.5837, -70, -38.5837)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_6g06c"]
polygon = PackedVector2Array(-98, -5, -98, -33, -138, -33, -138, -5)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_4bo3i"]
normal = Vector2(-1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_sr50s"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_hbnfl"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_o1cin"]
normal = Vector2(0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_p3kqb"]
font_size = 35

[sub_resource type="LabelSettings" id="LabelSettings_ejvh2"]
font_size = 35

[sub_resource type="LabelSettings" id="LabelSettings_4pvur"]
font_size = 60

[sub_resource type="LabelSettings" id="LabelSettings_fdvfh"]
font_size = 24

[sub_resource type="Environment" id="Environment_366ba"]
background_mode = 3
glow_enabled = true
glow_blend_mode = 1

[node name="Arena" type="Node2D"]
script = ExtResource("1_ea2pg")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(1280, 720)
texture = ExtResource("2_lxqbl")

[node name="Decorations" type="Node2D" parent="."]

[node name="SpecimenPod" type="Sprite2D" parent="Decorations"]
position = Vector2(247, 53)
texture = ExtResource("3_5e073")

[node name="SpecimenPod2" type="Sprite2D" parent="Decorations"]
position = Vector2(378, 53)
texture = ExtResource("4_b8tu2")

[node name="PointLight2D" type="PointLight2D" parent="Decorations/SpecimenPod2"]
position = Vector2(-0.999987, 45.5)
scale = Vector2(1.125, 0.765625)
texture = SubResource("GradientTexture2D_et5pj")

[node name="SpecimenPod3" type="Sprite2D" parent="Decorations"]
position = Vector2(508, 53)
texture = ExtResource("4_b8tu2")

[node name="PointLight2D" type="PointLight2D" parent="Decorations/SpecimenPod3"]
position = Vector2(-0.999987, 45.5)
scale = Vector2(1.125, 0.765625)
texture = SubResource("GradientTexture2D_et5pj")

[node name="SpecimenPod4" type="Sprite2D" parent="Decorations"]
position = Vector2(636, 53)
texture = ExtResource("4_b8tu2")

[node name="PointLight2D" type="PointLight2D" parent="Decorations/SpecimenPod4"]
position = Vector2(-0.999987, 45.5)
scale = Vector2(1.125, 0.765625)
texture = SubResource("GradientTexture2D_et5pj")

[node name="SpecimenPod5" type="Sprite2D" parent="Decorations"]
position = Vector2(767, 53)
texture = ExtResource("4_b8tu2")

[node name="PointLight2D" type="PointLight2D" parent="Decorations/SpecimenPod5"]
position = Vector2(-0.999987, 45.5)
scale = Vector2(1.125, 0.765625)
texture = SubResource("GradientTexture2D_et5pj")

[node name="SpecimenPod6" type="Sprite2D" parent="Decorations"]
position = Vector2(1791, 1390)
rotation = 3.14159
texture = ExtResource("4_b8tu2")

[node name="PointLight2D" type="PointLight2D" parent="Decorations/SpecimenPod6"]
position = Vector2(-0.999987, 45.5)
scale = Vector2(1.125, 0.765625)
texture = SubResource("GradientTexture2D_et5pj")

[node name="SpecimenPod7" type="Sprite2D" parent="Decorations"]
position = Vector2(1791, 1390)
rotation = 3.14159
texture = ExtResource("4_b8tu2")

[node name="PointLight2D" type="PointLight2D" parent="Decorations/SpecimenPod7"]
position = Vector2(-0.999987, 45.5)
scale = Vector2(1.125, 0.765625)
texture = SubResource("GradientTexture2D_et5pj")

[node name="SpecimenPod8" type="Sprite2D" parent="Decorations"]
position = Vector2(1922, 1390)
rotation = 3.14159
texture = ExtResource("4_b8tu2")

[node name="PointLight2D" type="PointLight2D" parent="Decorations/SpecimenPod8"]
position = Vector2(-0.999987, 45.5)
scale = Vector2(1.125, 0.765625)
texture = SubResource("GradientTexture2D_et5pj")

[node name="SpecimenPod9" type="Sprite2D" parent="Decorations"]
position = Vector2(2050, 1390)
rotation = 3.14159
texture = ExtResource("4_b8tu2")

[node name="PointLight2D" type="PointLight2D" parent="Decorations/SpecimenPod9"]
position = Vector2(-0.999987, 45.5)
scale = Vector2(1.125, 0.765625)
texture = SubResource("GradientTexture2D_et5pj")

[node name="SpecimenPod10" type="Sprite2D" parent="Decorations"]
position = Vector2(2181, 1390)
rotation = 3.14159
texture = ExtResource("4_b8tu2")

[node name="PointLight2D" type="PointLight2D" parent="Decorations/SpecimenPod10"]
position = Vector2(-0.999987, 45.5)
scale = Vector2(1.125, 0.765625)
texture = SubResource("GradientTexture2D_et5pj")

[node name="SpecimenPod11" type="Sprite2D" parent="Decorations"]
position = Vector2(2311, 1390)
rotation = 3.14159
texture = ExtResource("4_b8tu2")

[node name="PointLight2D" type="PointLight2D" parent="Decorations/SpecimenPod11"]
position = Vector2(-0.999987, 45.5)
scale = Vector2(1.125, 0.765625)
texture = SubResource("GradientTexture2D_et5pj")

[node name="Terminal" type="Sprite2D" parent="Decorations"]
position = Vector2(49, 733)
texture = ExtResource("5_reyu3")

[node name="PointLight2D" type="PointLight2D" parent="Decorations/Terminal"]
position = Vector2(24, -8)
scale = Vector2(2, 1.75)
energy = 1.5
texture = SubResource("GradientTexture2D_6w4b7")

[node name="Terminal2" type="Sprite2D" parent="Decorations"]
position = Vector2(2513, 710)
rotation = 3.14159
texture = ExtResource("5_reyu3")

[node name="PointLight2D" type="PointLight2D" parent="Decorations/Terminal2"]
position = Vector2(24, -8)
scale = Vector2(2, 1.75)
energy = 1.5
texture = SubResource("GradientTexture2D_6w4b7")

[node name="Terminal3" type="Sprite2D" parent="Decorations"]
position = Vector2(924, 51)
rotation = 1.5708
texture = ExtResource("5_reyu3")

[node name="PointLight2D" type="PointLight2D" parent="Decorations/Terminal3"]
position = Vector2(24, -8)
scale = Vector2(2, 1.75)
energy = 1.5
texture = SubResource("GradientTexture2D_6w4b7")

[node name="Terminal4" type="Sprite2D" parent="Decorations"]
position = Vector2(1638, 1390)
rotation = -1.5708
texture = ExtResource("5_reyu3")

[node name="PointLight2D" type="PointLight2D" parent="Decorations/Terminal4"]
position = Vector2(24, -8)
scale = Vector2(2, 1.75)
energy = 1.5
texture = SubResource("GradientTexture2D_6w4b7")

[node name="TV" type="Sprite2D" parent="Decorations"]
position = Vector2(32, 329)
texture = ExtResource("6_impxk")

[node name="PointLight2D" type="PointLight2D" parent="Decorations/TV"]
position = Vector2(112, -8.00001)
scale = Vector2(3.51563, 1.9375)
energy = 0.7
texture = SubResource("GradientTexture2D_mxxmj")

[node name="TV3" type="Sprite2D" parent="Decorations"]
position = Vector2(32, 505)
texture = ExtResource("6_impxk")

[node name="PointLight2D" type="PointLight2D" parent="Decorations/TV3"]
position = Vector2(112, -8.00001)
scale = Vector2(3.51563, 1.9375)
energy = 0.7
texture = SubResource("GradientTexture2D_mxxmj")

[node name="TV4" type="Sprite2D" parent="Decorations"]
position = Vector2(32, 946)
texture = ExtResource("6_impxk")

[node name="PointLight2D" type="PointLight2D" parent="Decorations/TV4"]
position = Vector2(112, -8.00001)
scale = Vector2(3.51563, 1.9375)
energy = 0.7
texture = SubResource("GradientTexture2D_mxxmj")

[node name="TV6" type="Sprite2D" parent="Decorations"]
position = Vector2(32, 1122)
texture = ExtResource("6_impxk")

[node name="PointLight2D" type="PointLight2D" parent="Decorations/TV6"]
position = Vector2(112, -8.00001)
scale = Vector2(3.51563, 1.9375)
energy = 0.7
texture = SubResource("GradientTexture2D_mxxmj")

[node name="LooseCables" type="Sprite2D" parent="Decorations"]
position = Vector2(48, 240)
rotation = 1.5708
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_eljs4")

[node name="LooseCables2" type="Sprite2D" parent="Decorations"]
position = Vector2(42, 648)
rotation = 1.5708
scale = Vector2(-0.3, 0.3)
texture = ExtResource("7_eljs4")

[node name="LooseCables3" type="Sprite2D" parent="Decorations"]
position = Vector2(48, 848)
rotation = 1.5708
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_eljs4")

[node name="LooseCables4" type="Sprite2D" parent="Decorations"]
position = Vector2(48, 1201)
rotation = 1.5708
scale = Vector2(-0.5, 0.5)
texture = ExtResource("7_eljs4")

[node name="Window" type="Sprite2D" parent="Decorations"]
position = Vector2(247, 1415)
texture = ExtResource("8_c1m3y")

[node name="PointLight2D" type="PointLight2D" parent="Decorations/Window"]
position = Vector2(1.49998, 509.694)
scale = Vector2(4.42188, 13.7188)
shadow_enabled = true
texture = SubResource("GradientTexture2D_26yt2")
offset = Vector2(0, -30.0096)

[node name="LightOccluder2D" type="LightOccluder2D" parent="Decorations/Window"]
position = Vector2(859, 529)
scale = Vector2(3.5, 13.0625)
occluder = SubResource("OccluderPolygon2D_vfrab")

[node name="LightOccluder2D2" type="LightOccluder2D" parent="Decorations/Window"]
position = Vector2(343, 529)
scale = Vector2(3.5, 13.0625)
occluder = SubResource("OccluderPolygon2D_vfrab")

[node name="LightOccluder2D3" type="LightOccluder2D" parent="Decorations/Window"]
position = Vector2(602, 528)
scale = Vector2(3.5, 13.0625)
occluder = SubResource("OccluderPolygon2D_vfrab")

[node name="LightOccluder2D4" type="LightOccluder2D" parent="Decorations/Window"]
position = Vector2(86, 529)
scale = Vector2(3.5, 13.0625)
occluder = SubResource("OccluderPolygon2D_vfrab")

[node name="Window2" type="Sprite2D" parent="Decorations"]
position = Vector2(763, 1415)
texture = ExtResource("8_c1m3y")

[node name="PointLight2D" type="PointLight2D" parent="Decorations/Window2"]
position = Vector2(1.49998, 509.694)
scale = Vector2(4.42188, 13.7188)
shadow_enabled = true
texture = SubResource("GradientTexture2D_26yt2")
offset = Vector2(0, -30.0096)

[node name="Window3" type="Sprite2D" parent="Decorations"]
position = Vector2(505, 1415)
texture = ExtResource("8_c1m3y")

[node name="PointLight2D" type="PointLight2D" parent="Decorations/Window3"]
position = Vector2(1.49998, 509.694)
scale = Vector2(4.42188, 13.7188)
shadow_enabled = true
texture = SubResource("GradientTexture2D_26yt2")
offset = Vector2(0, -30.0096)

[node name="Window4" type="Sprite2D" parent="Decorations"]
position = Vector2(2535, 1027)
rotation = 1.5708
texture = ExtResource("8_c1m3y")

[node name="PointLight2D" type="PointLight2D" parent="Decorations/Window4"]
position = Vector2(-3.00003, -708.005)
rotation = 3.14159
scale = Vector2(4.42188, 20.75)
shadow_enabled = true
texture = SubResource("GradientTexture2D_26yt2")
offset = Vector2(0, -30.0096)

[node name="LightOccluder2D2" type="LightOccluder2D" parent="Decorations/Window4"]
position = Vector2(236, 8.99998)
occluder = SubResource("OccluderPolygon2D_6g06c")

[node name="LightOccluder2D" type="LightOccluder2D" parent="Decorations/Window4"]
position = Vector2(0, 9)
occluder = SubResource("OccluderPolygon2D_6g06c")

[node name="Window5" type="Sprite2D" parent="Decorations"]
position = Vector2(2535, 415)
rotation = 1.5708
texture = ExtResource("8_c1m3y")

[node name="LightOccluder2D" type="LightOccluder2D" parent="Decorations/Window5"]
position = Vector2(0, 9)
occluder = SubResource("OccluderPolygon2D_6g06c")

[node name="PointLight2D" type="PointLight2D" parent="Decorations/Window5"]
position = Vector2(-3.00003, -708.005)
rotation = 3.14159
scale = Vector2(4.42188, 20.75)
shadow_enabled = true
texture = SubResource("GradientTexture2D_26yt2")
offset = Vector2(0, -30.0096)

[node name="LightOccluder2D2" type="LightOccluder2D" parent="Decorations/Window5"]
position = Vector2(236, 8.99998)
occluder = SubResource("OccluderPolygon2D_6g06c")

[node name="Lighting" type="Node2D" parent="."]

[node name="CeilingLight5" type="Sprite2D" parent="Lighting"]
modulate = Color(0.396078, 0.635294, 0.741176, 0.823529)
position = Vector2(1281, 396)
texture = ExtResource("10_o7cfw")

[node name="CeilingLight6" type="Sprite2D" parent="Lighting"]
modulate = Color(0.396078, 0.635294, 0.741176, 0.823529)
position = Vector2(1283, 1013)
texture = ExtResource("10_o7cfw")

[node name="CeilingLight" type="Sprite2D" parent="Lighting"]
modulate = Color(0.431373, 0.662745, 0.756863, 0.101961)
position = Vector2(426, 715)
scale = Vector2(1, 1.02975)
texture = ExtResource("3_8geih")

[node name="CeilingLight2" type="Sprite2D" parent="Lighting"]
modulate = Color(0.431373, 0.662745, 0.756863, 0.101961)
position = Vector2(866, 715)
scale = Vector2(1, 1.02975)
texture = ExtResource("3_8geih")

[node name="CeilingLight3" type="Sprite2D" parent="Lighting"]
modulate = Color(0.431373, 0.662745, 0.756863, 0.101961)
position = Vector2(1716, 715)
scale = Vector2(1, 1.02975)
texture = ExtResource("3_8geih")

[node name="CeilingLight4" type="Sprite2D" parent="Lighting"]
modulate = Color(0.431373, 0.662745, 0.756863, 0.101961)
position = Vector2(2132, 715)
scale = Vector2(1, 1.02975)
texture = ExtResource("3_8geih")

[node name="Player" parent="." instance=ExtResource("1_pqj1j")]
position = Vector2(1280, 720)

[node name="Boundaries" type="Node2D" parent="."]

[node name="RightBoundary" type="StaticBody2D" parent="Boundaries"]
position = Vector2(2560, 1080)

[node name="RightBoundaryCollisionShape2D" type="CollisionShape2D" parent="Boundaries/RightBoundary"]
shape = SubResource("WorldBoundaryShape2D_4bo3i")

[node name="BottomBoundary" type="StaticBody2D" parent="Boundaries"]
position = Vector2(1920, 1440)

[node name="BottomBoundaryCollisionShape2D" type="CollisionShape2D" parent="Boundaries/BottomBoundary"]
shape = SubResource("WorldBoundaryShape2D_sr50s")

[node name="LeftBoundary" type="StaticBody2D" parent="Boundaries"]
position = Vector2(0, 1080)

[node name="LeftBoundaryCollisionShape2D" type="CollisionShape2D" parent="Boundaries/LeftBoundary"]
shape = SubResource("WorldBoundaryShape2D_hbnfl")

[node name="TopBoundary" type="StaticBody2D" parent="Boundaries"]

[node name="TopBoundaryCollisionShape2D" type="CollisionShape2D" parent="Boundaries/TopBoundary"]
position = Vector2(1920, 0)
shape = SubResource("WorldBoundaryShape2D_o1cin")

[node name="UserInterface" type="CanvasLayer" parent="."]

[node name="RoundLabel" type="Label" parent="UserInterface"]
offset_left = 70.0
offset_top = 80.0
offset_right = 167.0
offset_bottom = 115.0
text = "Round"
label_settings = SubResource("LabelSettings_p3kqb")
horizontal_alignment = 1

[node name="RoundNumberLabel" type="Label" parent="UserInterface"]
offset_left = 180.0
offset_top = 80.0
offset_right = 270.0
offset_bottom = 115.0
text = "1"
label_settings = SubResource("LabelSettings_ejvh2")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("4_53yap")
current_state = NodePath("ConditionAndAdaptationSelection")

[node name="ConditionAndAdaptationSelection" type="Node" parent="StateMachine"]
script = ExtResource("6_303ff")

[node name="UpgradeSelectionInterface" type="CanvasLayer" parent="StateMachine/ConditionAndAdaptationSelection"]

[node name="RoundActive" type="Node" parent="StateMachine"]
script = ExtResource("5_vs3oy")

[node name="EnemySpawnTimer" type="Timer" parent="StateMachine/RoundActive"]
one_shot = true

[node name="ScoreScreen" type="Node" parent="StateMachine"]
script = ExtResource("8_p700b")

[node name="ScoreInterface" type="CanvasLayer" parent="StateMachine/ScoreScreen"]

[node name="GameOverLabel" type="Label" parent="StateMachine/ScoreScreen/ScoreInterface"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -163.0
offset_top = 236.0
offset_right = 163.0
offset_bottom = 319.0
grow_horizontal = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_4pvur")
horizontal_alignment = 1

[node name="RoundLabel" type="Label" parent="StateMachine/ScoreScreen/ScoreInterface"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.5
offset_top = 350.0
offset_right = 150.5
offset_bottom = 395.0
grow_horizontal = 2
text = "You reach round 12"
label_settings = SubResource("LabelSettings_fdvfh")
horizontal_alignment = 1

[node name="MainMenuButton" type="Button" parent="StateMachine/ScoreScreen/ScoreInterface"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -87.0
offset_top = -502.0
offset_right = 87.0
offset_bottom = -471.0
grow_horizontal = 2
grow_vertical = 0
text = "Return to main menu"

[node name="MusicManager" parent="." instance=ExtResource("11_gl3pw")]
visible = false

[node name="Timer0-12s" type="Timer" parent="MusicManager"]
wait_time = 12.0
one_shot = true

[node name="Timer12-30s" type="Timer" parent="MusicManager"]
wait_time = 18.0
one_shot = true

[node name="Timer30-39s" type="Timer" parent="MusicManager"]
wait_time = 9.0
one_shot = true

[node name="Timer39-48s" type="Timer" parent="MusicManager"]
wait_time = 9.0
one_shot = true

[node name="Timer48-60s" type="Timer" parent="MusicManager"]
wait_time = 12.0
one_shot = true

[node name="Timer60-78s" type="Timer" parent="MusicManager"]
wait_time = 18.0
one_shot = true

[node name="Timer78-90s" type="Timer" parent="MusicManager"]
wait_time = 12.0
one_shot = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_366ba")

[connection signal="timeout" from="StateMachine/RoundActive/EnemySpawnTimer" to="StateMachine/RoundActive" method="_on_enemy_spawn_timer_timeout"]
[connection signal="mouse_entered" from="StateMachine/ScoreScreen/ScoreInterface/MainMenuButton" to="." method="_on_main_menu_button_mouse_entered"]
[connection signal="pressed" from="StateMachine/ScoreScreen/ScoreInterface/MainMenuButton" to="StateMachine/ScoreScreen" method="_on_main_menu_button_pressed"]
[connection signal="timeout" from="MusicManager/Timer0-12s" to="." method="_on_timer_012s_timeout"]
[connection signal="timeout" from="MusicManager/Timer12-30s" to="." method="_on_timer_1230s_timeout"]
[connection signal="timeout" from="MusicManager/Timer30-39s" to="." method="_on_timer_3039s_timeout"]
[connection signal="timeout" from="MusicManager/Timer39-48s" to="." method="_on_timer_3948s_timeout"]
[connection signal="timeout" from="MusicManager/Timer48-60s" to="." method="_on_timer_4860s_timeout"]
[connection signal="timeout" from="MusicManager/Timer60-78s" to="." method="_on_timer_6078s_timeout"]
[connection signal="timeout" from="MusicManager/Timer78-90s" to="." method="_on_timer_7890s_timeout"]
